@@ -1,5 +1,7 @@
-<?lsmb INCLUDE 'ui-header.html'
-        stylesheet = stylesheet
+<?lsmb
+
+ INCLUDE 'ui-header.html'
+        stylesheet = USER.stylesheet
 	include_stylesheet = [
 		'UI/Contact/contact.css'
 	] 
