@@ -1,5 +1,6 @@
 <?lsmb INCLUDE 'ui-header.html' 
       include_stylesheet = ["UI/business_unit/edit.css"] 
+      stylesheet = USER.stylesheet
 ?>
 <?lsmb PROCESS 'elements.html' ?>
 <body onLoad="init()">
